# routes/movies.js
@@ -1,36 +1,39 @@
 const router = require("express").Router(),
     { getMovies, getMovieByTitle } = require("../controllers/movies"),
     { getGenreByName } = require("../controllers/genres"),
-    { getDirectorByName } = require("../controllers/directors"),
+    {
+        getDirectorByName,
+        getDirectorByID,
+    } = require("../controllers/directors"),
     { getActorByName } = require("../controllers/actors");
 
 // Routes for Movies
 router.route("/").get(
     // passport.authenticate("jwt", { session: false }),
-    getMovies,
+    getMovies
 );
 
 // Get a Movie by Title
 router.route("/:title").get(
     // passport.authenticate("jwt", { session: false }),
-    getMovieByTitle,
+    getMovieByTitle
 );
 
 // Get the genre of a movie by name
 router.route("/genres/:name").get(
     // passport.authenticate("jwt", { session: false }),
-    getGenreByName,
+    getGenreByName
 );
 
 // Get the info about a director by name
 router.route("/directors/:name").get(
     // passport.authenticate("jwt", { session: false }),
-    getDirectorByName,
+    getDirectorByName
 );
 
 router.route("/actors/:name").get(
     // passport.authenticate("jwt", { session: false }),
-    getActorByName,
+    getActorByName
 );
 
 module.exports = router;
